error managing in controller and javadoc